2007-12-01  Ingo Renner	<ingo@typo3.org>

	* added feature #6868: Enable labels for EM extension configuration, credits Georg Ringer

2007-12-02  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #6663: Unserialized objects not debugged properly (by Francois Suter)
	* Minor change to tsconfig_help sysext (by Francois Suter)
	* Issue #6873: Added icon for pages marked as not in menu and with FE-user access restriction to t3skin (by Francois Suter)

2007-11-30  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5602: spamProtectEmailAddresses_atSubst is not recognized correctly

2007-11-30  Ingo Renner	<ingo@typo3.org>

	* added positioning function for the clear cache menu which is needed to keep the menu below it's icon when new items are added to the toolbar
	* added backend search toolbar item to backend.php

2007-11-29  Benjamin Mack  <mack@xnos.org>

	* (feature) #6833: Possibility to add inline JS to page (Thanks to Steffen Kamper)
	* (minor) Fixed #6825: TCEforms -- Icon for empty palettes are not displayed anymore

2007-11-27  Ingo Renner	<ingo@typo3.org>

	* added clear cache actions menu to backend.php as part of the cleaner backend project
	* moved user info and logout button to the toolbar

2007-11-27  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Bugfix #6836: htmlArea RTE cannot enter line break in Safari (Windows)

2007-11-26  Ingo Renner	<ingo@typo3.org>

	* moved interface t3lib_backendToolbarItem to typo3/interfaces/interface.backend_toolbaritem.php

2007-11-26  Wolfgang Klinger <wk@plan2.net>

	* Fixed bug #6831: Clickmenu is cut off on the left, when it does not fit in the viewport (Thanks to Helmut Hummel)

2007-11-25  Dmitry Dulepov  <dmitry@typo3.org>

	* Reformatted t3editor sysext

2007-11-25  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed Bug #6828: Using outpug buffering for debug() to prevent "Headers already sent" errors

2007-11-25  Benjamin Mack  <mack@xnos.org>
